--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoom Earth</title>
+    <title>Zoom Earth Weather</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="./weather-app.png">
 </head>
 <body>
     <div id="weather-container">
-        <h2>Zoom-Earth</h2>
+        <h1>Zoom Earth</h1>
         <input type="text" id="city" placeholder="Enter the city name">
         <button onclick="getWeather()">Search</button>
         <img id="weather-icon">
